{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 83,
  "lineage": "5225c131-e77c-04c9-da32-80206bdd4e45",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:048644955535:loadbalancer/app/tf-lb-20240226014002239200000004/4c1f78d358869516",
            "arn_suffix": "app/tf-lb-20240226014002239200000004/4c1f78d358869516",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tf-lb-20240226014002239200000004-704606400.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:048644955535:loadbalancer/app/tf-lb-20240226014002239200000004/4c1f78d358869516",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240226014002239200000004",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-084d60538bcb38848"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049afe01c75014012"
              },
              {
                "subnet_id": "subnet-0b6003c8d3a8b2cad"
              }
            ],
            "subnets": [
              "subnet-049afe01c75014012",
              "subnet-0b6003c8d3a8b2cad"
            ],
            "vpc_id": "vpc-08644e01225b62e6b",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.lb_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:048644955535:listener/app/tf-lb-20240226014002239200000004/4c1f78d358869516/9c5fc3ec732371bc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:048644955535:targetgroup/tf-20240226013959077600000001/674772c5cae8b1c5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:048644955535:listener/app/tf-lb-20240226014002239200000004/4c1f78d358869516/9c5fc3ec732371bc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:048644955535:loadbalancer/app/tf-lb-20240226014002239200000004/4c1f78d358869516",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.alb_ecs_tg",
            "aws_security_group.lb_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:048644955535:targetgroup/tf-20240226013959077600000001/674772c5cae8b1c5",
            "arn_suffix": "targetgroup/tf-20240226013959077600000001/674772c5cae8b1c5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:048644955535:targetgroup/tf-20240226013959077600000001/674772c5cae8b1c5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240226013959077600000001",
            "name_prefix": "tf-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08644e01225b62e6b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:048644955535:security-group/sg-038fc30dc0d8fa891",
            "description": "ECS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic by default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038fc30dc0d8fa891",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress from Load Balancer",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084d60538bcb38848"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20240226013959077600000002",
            "name_prefix": "terraform-",
            "owner_id": "048644955535",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08644e01225b62e6b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:048644955535:security-group/sg-084d60538bcb38848",
            "description": "LoadBalancer Security Group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Target group egress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038fc30dc0d8fa891"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-084d60538bcb38848",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow from anyone on port 80",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20240226013959077600000003",
            "name_prefix": "terraform-",
            "owner_id": "048644955535",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08644e01225b62e6b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpclink_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:048644955535:security-group/sg-0ed1bd6f93a073b9a",
            "description": "VPCLink Security Group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Target group egress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084d60538bcb38848"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0ed1bd6f93a073b9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow from anyone on port 80",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20240226030751913900000001",
            "name_prefix": "terraform-",
            "owner_id": "048644955535",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08644e01225b62e6b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_rule_lb_to_ecs_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Target group egress",
            "from_port": 8080,
            "id": "sgrule-539712695",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-084d60538bcb38848",
            "security_group_rule_id": "sgr-0ba259175aff52732",
            "self": false,
            "source_security_group_id": "sg-038fc30dc0d8fa891",
            "timeouts": null,
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_security_group",
            "aws_security_group.lb_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_rule_vpclink_to_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Target group egress",
            "from_port": 8080,
            "id": "sgrule-2648588300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ed1bd6f93a073b9a",
            "security_group_rule_id": "sgr-030bbd3606f785c33",
            "self": false,
            "source_security_group_id": "sg-084d60538bcb38848",
            "timeouts": null,
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_security_group",
            "aws_security_group.vpclink_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_rule_ecs_cluster_from_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress from Load Balancer",
            "from_port": 8080,
            "id": "sgrule-130189238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-038fc30dc0d8fa891",
            "security_group_rule_id": "sgr-0975f35f69ed5ec69",
            "self": false,
            "source_security_group_id": "sg-084d60538bcb38848",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_security_group",
            "aws_security_group.lb_security_group"
          ]
        }
      ]
    }
  ]
}